@@ -1,0 +1,6 @@
+SET UTF-8
+
+FULLSTRIP
+
+SFX A Y 1
+SFX A   beer        tasty  .
